welcome.lessons.welcome.loopdowhile.Poucet2.scala.error
Poucet:1: error: not found: value exitfound
while (!exitfound()){
        ^